--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,20 @@ body {
     font-weight: 700;
     font-size: 48px;
     color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto{
+    color: var(--cinza-secundario);
+}
+
+.secundario__botao{
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__dscricao{
+    padding: 2em;
 }
 
 
